fix weird dark mode color issue

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  background-color: #282c34 !important;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -58,8 +62,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
     font-size: xx-large;
+    background-color: rgba(0, 0, 0, 0) !important;
   
-    background-color: #282c34 !important;
     /* min-height: 100vh;
     display: flex;
     flex-direction: column;
